edited Notifications title

--- a/docs/glue42-concepts/07_notifications/config.json
+++ b/docs/glue42-concepts/07_notifications/config.json
@@ -1,6 +1,6 @@
 {
     "menuItem": "Notifications",
-    "title": "Glue42 Notification Service",
+    "title": "Notifications",
     "displayTitle": true,
     "titleType": "title"
 }
