Updated App & Layout Stores sections.

--- a/docs/glue42-concepts/02_application-management/config.json
+++ b/docs/glue42-concepts/02_application-management/config.json
@@ -1,6 +1,6 @@
 {
-    "menuItem": "Application Management",
-    "title": "Application Management",
+    "menuItem": "App Management",
+    "title": "App Management",
     "displayTitle": true,
     "titleType": "title"
 }
