--- a/docs/glue42-concepts/03_application-preferences/config.json
+++ b/docs/glue42-concepts/03_application-preferences/config.json
@@ -1,6 +1,6 @@
 {
-    "menuItem": "Application Preferences",
-    "title": "Application Preferences",
+    "menuItem": "App Preferences",
+    "title": "App Preferences",
     "displayTitle": true,
     "titleType": "title"
 }
