Updated info about configuration schemas. Added gw.json schema.

--- a/docs/config-template.json
+++ b/docs/config-template.json
@@ -4,5 +4,6 @@
     "displayTitle": true,
     "expanded": true,
     "titleType": "chapter | title | subtitle | technology",
-    "externalURL": "https://..."
+    "externalURL": "https://...",
+    "class": "CSS-class-name"
 }
